--- a/warofsix/.env.sample
+++ b/warofsix/.env.sample
@@ -28,3 +28,6 @@ DB_USER = "user"
 DB_PASS = "pass"
 DB_HOST = "host"
 DB_PORT = "5432"
+
+RABBITMQ_DEFAULT_USER="guest"
+RABBITMQ_DEFAULT_PASS="guest"
