--- a/warofsix/docker-compose.yml
+++ b/warofsix/docker-compose.yml
@@ -2,8 +2,14 @@ version: '3.9'
 
 services:
   django_gunicorn:
-    build:
-      context: .
+    build: .
+    volumes:
+      - .:/app/
+    command: >
+      sh -c "python manage.py wait_for_db &&
+            python manage.py makemigrations &&
+            python manage.py migrate &&
+            gunicorn warofsix.wsgi:application --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
     environment:
@@ -12,16 +18,26 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - SECRET_KEY=${SECRET_KEY}
+      - CELERY_BROKER_URL=amqp://rabbitmq:5672
     depends_on:
       - db
       
 
   celery:
     build: .
-    command: celery -A warofsix worker --loglevel=INFO
+    volumes:
+      - .:/app/
+    command: celery -A warofsix worker -l INFO
     depends_on:
       - django_gunicorn
-      - redis
+      - rabbitmq
+    environment:
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - SECRET_KEY=${SECRET_KEY}
+      - CELERY_BROKER_URL=amqp://rabbitmq:5672
 
   db:
     image: postgres
@@ -34,15 +50,15 @@ services:
     container_name: postgres_db
 
 
-  # rabbitmq:
-  #   image: rabbitmq:3-management-alpine
-  #   container_name: rabbitmq
-  #   ports:
-  #     - "5672:5672"
-  #     - "15672:15672"
-
-  redis:
-    image: "redis:alpine"
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq/
+      - rabbitmq_log:/var/log/rabbitmq
+      - ./rabbitmq_advanced.config:/etc/rabbitmq/advanced.config
+    ports:
+      - 5672:5672
 
   nginx:
     build: ./nginx
@@ -53,4 +69,5 @@ services:
 
 volumes:
   pgdata:
-  celery:
+  rabbitmq_data:
+  rabbitmq_log:
